[gd_scene load_steps=42 format=3 uid="uid://cyaw4x2juog4u"]

[ext_resource type="Script" uid="uid://2dxxk5eg0ks5" path="res://barkley2/scenes/Objects/System/o_hud_minimal.gd" id="1_75hyb"]
[ext_resource type="Script" uid="uid://d2pqd3n8yanel" path="res://barkley2/scenes/Objects/System/minimal_combat_module.gd" id="2_3opby"]
[ext_resource type="Texture2D" uid="uid://bvtq3dk87dgrm" path="res://barkley2/assets/b1_original/images/combat_icons/sBIcon_2.png" id="2_lpas3"]
[ext_resource type="Theme" uid="uid://c7cxu4mqaywah" path="res://barkley2/themes/combat_ui.tres" id="2_t5p5n"]
[ext_resource type="Texture2D" uid="uid://blpuh3ucxvwvm" path="res://barkley2/assets/b1_original/images/combat_icons/sBIcon_7.png" id="3_3opby"]
[ext_resource type="Texture2D" uid="uid://cuuimkyfxk2vc" path="res://barkley2/assets/b1_original/images/combat_icons/sBIcon_12.png" id="4_vc3pw"]
[ext_resource type="Texture2D" uid="uid://codsciwaducpv" path="res://barkley2/assets/b1_original/images/combat_icons/sBIcon_3.png" id="5_r1ewr"]
[ext_resource type="Texture2D" uid="uid://blkte63347h5j" path="res://barkley2/assets/b1_original/images/combat_icons/sBIcon_8.png" id="6_t5p5n"]
[ext_resource type="Texture2D" uid="uid://bxgp4w5xhfe1c" path="res://barkley2/assets/b1_original/images/combat_icons/sBIcon_13.png" id="7_63xqi"]
[ext_resource type="Texture2D" uid="uid://00hk1b14h353" path="res://barkley2/assets/b1_original/images/combat_icons/sBIcon_4.png" id="8_htdpj"]
[ext_resource type="Texture2D" uid="uid://bvxv5tnvn2h11" path="res://barkley2/assets/b1_original/images/combat_icons/sBIcon_9.png" id="9_x0nn2"]
[ext_resource type="Texture2D" uid="uid://cctm6u8b550ge" path="res://barkley2/assets/b1_original/images/combat_icons/sBIcon_14.png" id="10_xwlel"]
[ext_resource type="Texture2D" uid="uid://c76u6ofxfbg0o" path="res://barkley2/assets/b1_original/images/combat_icons/sBIcon_0.png" id="11_yt2hp"]
[ext_resource type="Texture2D" uid="uid://c015nhh3igmsm" path="res://barkley2/assets/b1_original/images/combat_icons/sBIcon_5.png" id="12_1rlk0"]
[ext_resource type="Texture2D" uid="uid://k2futdeuep3a" path="res://barkley2/assets/b1_original/images/combat_icons/sBIcon_10.png" id="13_3u53f"]
[ext_resource type="Texture2D" uid="uid://b1bu3h05qytbr" path="res://barkley2/assets/b1_original/images/combat_icons/sBIcon_15.png" id="14_0pw4b"]
[ext_resource type="Texture2D" uid="uid://dq3fsqyhbil7l" path="res://barkley2/assets/b1_original/images/combat_icons/sBIcon_16.png" id="15_b52p3"]
[ext_resource type="Texture2D" uid="uid://d4ipodgsfcd2k" path="res://barkley2/assets/b1_original/images/combat_icons/sBIcon_17.png" id="16_ksyt8"]
[ext_resource type="Script" uid="uid://hdtn72r3n557" path="res://barkley2/scenes/_Godot_Combat/weapon_stats_mini.gd" id="18_r1ewr"]
[ext_resource type="Texture2D" uid="uid://bby3h27kh76mu" path="res://barkley2/resources/B2_Weapon/weapon_atlas01.tres" id="19_t5p5n"]
[ext_resource type="FontFile" uid="uid://c5asr1c5g1w6h" path="res://barkley2/resources/fonts/fn_small.tres" id="20_63xqi"]
[ext_resource type="Texture2D" uid="uid://b8ia6t3gnxmbh" path="res://barkley2/assets/b1_original/images/merged/sDialogBox.png" id="22_htdpj"]
[ext_resource type="FontFile" uid="uid://bmt3s8i84e3xl" path="res://barkley2/resources/fonts/fn1.tres" id="23_x0nn2"]
[ext_resource type="FontFile" uid="uid://bq5ct8srd86o6" path="res://barkley2/resources/fonts/fn5o.tres" id="24_x0nn2"]

[sub_resource type="Animation" id="Animation_63xqi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("combat_module/attack_btn:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(311, 173)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("combat_module/item_btn:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(334, 173)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("combat_module/escape_btn:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(311, 196)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("combat_module/defend_btn:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(311, 150)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("combat_module/move_btn:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(288, 173)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("mini_tutorial:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("combat_module:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_3u53f"]
resource_name = "hide_battle_stuff"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("combat_module:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_yt2hp"]
resource_name = "hide_tutorial"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("mini_tutorial:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_t5p5n"]
resource_name = "move_mini_hud"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("combat_module/attack_btn:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(311, 173), Vector2(311, 173), Vector2(311, 173)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("combat_module/item_btn:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(334, 173), Vector2(336, 173), Vector2(334, 173)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("combat_module/escape_btn:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(311, 196), Vector2(311, 199), Vector2(311, 196)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("combat_module/defend_btn:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(311, 150), Vector2(311, 147), Vector2(311, 150)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("combat_module/move_btn:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(288, 173), Vector2(285, 173), Vector2(288, 173)]
}

[sub_resource type="Animation" id="Animation_1rlk0"]
resource_name = "show_battle_stuff"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("combat_module:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_xwlel"]
resource_name = "show_tutorial"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("mini_tutorial:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_htdpj"]
_data = {
&"RESET": SubResource("Animation_63xqi"),
&"hide_battle_stuff": SubResource("Animation_3u53f"),
&"hide_tutorial": SubResource("Animation_yt2hp"),
&"move_mini_hud": SubResource("Animation_t5p5n"),
&"show_battle_stuff": SubResource("Animation_1rlk0"),
&"show_tutorial": SubResource("Animation_xwlel")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_exq50"]
bg_color = Color(0.5, 0.5, 0.5, 0.1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mn44q"]
bg_color = Color(1, 1, 1, 0.1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
anti_aliasing = false

[sub_resource type="Theme" id="Theme_htdpj"]
ProgressBar/fonts/font = null
ProgressBar/styles/background = SubResource("StyleBoxFlat_exq50")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_mn44q")

[sub_resource type="LabelSettings" id="LabelSettings_x0nn2"]
font = ExtResource("20_63xqi")

[sub_resource type="GDScript" id="GDScript_xwlel"]
resource_name = "battle_result"
script/source = "@tool
extends NinePatchRect

signal battle_results_finished

const MAX_CHARS := 50

@onready var result_title_label: Label = $MarginContainer/result_title_label
@onready var animation_player: AnimationPlayer = $AnimationPlayer

var can_change_msg := false # avoid interactions before the battle is finished

## Result msg structure:
# \"{ \"msg\":\"placeholder message\", \"sfx\":\"sn_placeholder\" }
var results : Array[Dictionary] = []

var tween : Tween

func _post_ready() -> void:
	hide()

func _input(_event: InputEvent) -> void:
	if can_change_msg:
		if Input.is_action_just_pressed(\"Action\") or Input.is_action_just_pressed(\"Holster\"):
			_next_message()

func _next_message() -> void:
	if not results.is_empty():
		var msg : Dictionary = results.pop_front()
		
		if msg.has(\"sfx\"):
			B2_Sound.play( msg[\"sfx\"] )
		if msg.has(\"msg\"):
			result_title_label.text = msg[\"msg\"]
		else:
			push_error(\"Invalid msg: \", msg)
			
	else:
		# finished displaying message.
		can_change_msg = false
		hide_battle_results()

## TODO tween_animation
func display_battle_results() -> void:
	_next_message()
	animation_player.play(\"show_menu\")
	await animation_player.animation_finished
	can_change_msg = true
	
## TODO tween_animation
func hide_battle_results() -> void:
	animation_player.play(\"hide_menu\")
	await animation_player.animation_finished
	
	battle_results_finished.emit()
	hide()
"

[sub_resource type="Animation" id="Animation_g78sf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -40)]
}

[sub_resource type="Animation" id="Animation_ycyro"]
resource_name = "hide_menu"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -40)]
}

[sub_resource type="Animation" id="Animation_fxuxk"]
resource_name = "show_menu"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -40), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1kavn"]
_data = {
&"RESET": SubResource("Animation_g78sf"),
&"hide_menu": SubResource("Animation_ycyro"),
&"show_menu": SubResource("Animation_fxuxk")
}

[sub_resource type="LabelSettings" id="LabelSettings_yt2hp"]
font = ExtResource("23_x0nn2")

[node name="o_hud_minimal" type="CanvasLayer"]
script = ExtResource("1_75hyb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
libraries = {
&"": SubResource("AnimationLibrary_htdpj")
}

[node name="combat_module" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_t5p5n")
script = ExtResource("2_3opby")

[node name="attack_btn" type="TextureButton" parent="combat_module"]
layout_mode = 0
offset_left = 311.0
offset_top = 173.0
offset_right = 331.0
offset_bottom = 193.0
tooltip_text = "Aim your gun and shoot."
texture_normal = ExtResource("2_lpas3")
texture_pressed = ExtResource("3_3opby")
texture_hover = ExtResource("4_vc3pw")
texture_disabled = ExtResource("2_lpas3")
texture_focused = ExtResource("3_3opby")

[node name="item_btn" type="TextureButton" parent="combat_module"]
layout_mode = 0
offset_left = 334.0
offset_top = 173.0
offset_right = 354.0
offset_bottom = 193.0
tooltip_text = "Use items."
disabled = true
texture_normal = ExtResource("5_r1ewr")
texture_pressed = ExtResource("6_t5p5n")
texture_hover = ExtResource("7_63xqi")
texture_disabled = ExtResource("5_r1ewr")
texture_focused = ExtResource("6_t5p5n")

[node name="escape_btn" type="TextureButton" parent="combat_module"]
layout_mode = 0
offset_left = 311.0
offset_top = 196.0
offset_right = 331.0
offset_bottom = 216.0
tooltip_text = "Escape from battle."
disabled = true
texture_normal = ExtResource("8_htdpj")
texture_pressed = ExtResource("9_x0nn2")
texture_hover = ExtResource("10_xwlel")
texture_disabled = ExtResource("8_htdpj")
texture_focused = ExtResource("9_x0nn2")

[node name="defend_btn" type="TextureButton" parent="combat_module"]
layout_mode = 0
offset_left = 311.0
offset_top = 150.0
offset_right = 331.0
offset_bottom = 170.0
tooltip_text = "Try to deffend youself."
disabled = true
texture_normal = ExtResource("11_yt2hp")
texture_pressed = ExtResource("12_1rlk0")
texture_hover = ExtResource("13_3u53f")
texture_disabled = ExtResource("11_yt2hp")
texture_focused = ExtResource("12_1rlk0")

[node name="move_btn" type="TextureButton" parent="combat_module"]
layout_mode = 0
offset_left = 288.0
offset_top = 173.0
offset_right = 308.0
offset_bottom = 193.0
tooltip_text = "Roll to a better position."
texture_normal = ExtResource("14_0pw4b")
texture_pressed = ExtResource("15_b52p3")
texture_hover = ExtResource("16_ksyt8")
texture_disabled = ExtResource("14_0pw4b")
texture_focused = ExtResource("15_b52p3")

[node name="weapon_stats_mini" type="VBoxContainer" parent="combat_module"]
layout_mode = 0
offset_left = 1.0
offset_top = 206.0
offset_right = 156.0
offset_bottom = 239.0
theme_override_constants/separation = 2
script = ExtResource("18_r1ewr")

[node name="wpn_list" type="HBoxContainer" parent="combat_module/weapon_stats_mini"]
layout_mode = 2

[node name="gun_1" type="TextureRect" parent="combat_module/weapon_stats_mini/wpn_list"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("19_t5p5n")

[node name="g1_bar" type="ProgressBar" parent="combat_module/weapon_stats_mini/wpn_list/gun_1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_htdpj")
value = 75.0
show_percentage = false

[node name="percent" type="Label" parent="combat_module/weapon_stats_mini/wpn_list/gun_1"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -9.0
grow_horizontal = 2
grow_vertical = 0
text = "75%"
horizontal_alignment = 2

[node name="gun_2" type="TextureRect" parent="combat_module/weapon_stats_mini/wpn_list"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("19_t5p5n")

[node name="g2_bar" type="ProgressBar" parent="combat_module/weapon_stats_mini/wpn_list/gun_2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_htdpj")
value = 75.0
show_percentage = false

[node name="percent" type="Label" parent="combat_module/weapon_stats_mini/wpn_list/gun_2"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -9.0
grow_horizontal = 2
grow_vertical = 0
text = "75%"
horizontal_alignment = 2

[node name="gun_3" type="TextureRect" parent="combat_module/weapon_stats_mini/wpn_list"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("19_t5p5n")

[node name="g3_bar" type="ProgressBar" parent="combat_module/weapon_stats_mini/wpn_list/gun_3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_htdpj")
value = 75.0
show_percentage = false

[node name="percent" type="Label" parent="combat_module/weapon_stats_mini/wpn_list/gun_3"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -9.0
grow_horizontal = 2
grow_vertical = 0
text = "75%"
horizontal_alignment = 2

[node name="wpn_name" type="Label" parent="combat_module/weapon_stats_mini"]
layout_mode = 2
text = "PLACEHOLDER"
label_settings = SubResource("LabelSettings_x0nn2")
vertical_alignment = 1

[node name="battle_results" type="NinePatchRect" parent="."]
visible = false
custom_minimum_size = Vector2(0, 32)
anchors_preset = 10
anchor_right = 1.0
offset_top = -40.0
offset_bottom = -8.0
grow_horizontal = 2
texture = ExtResource("22_htdpj")
region_rect = Rect2(328, 5, 67, 67)
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
script = SubResource("GDScript_xwlel")

[node name="AnimationPlayer" type="AnimationPlayer" parent="battle_results"]
reset_on_save = false
libraries = {
&"": SubResource("AnimationLibrary_1kavn")
}

[node name="MarginContainer" type="MarginContainer" parent="battle_results"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="result_title_label" type="Label" parent="battle_results/MarginContainer"]
layout_mode = 2
text = "Placeholder Text"
label_settings = SubResource("LabelSettings_yt2hp")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="mini_tutorial" type="RichTextLabel" parent="."]
offset_left = 2.0
offset_top = 2.0
offset_right = 203.0
offset_bottom = 53.0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("24_x0nn2")
bbcode_enabled = true
text = "Select an action using the [color=yellow]Hud[/color]
Either [color=yellow]Shoot[/color] or [color=yellow]Roll[/color] when you have enough [color=yellow]Action Points[/color]."
